tests/NormalTests/paczka1/fuzzy1/42179590.err
Error in line 4: Xik2uSolxC S407 65,1
Error in line 17: S2 S711 12,4
Error in line 19: S2 S711 48,8
Error in line 24: S2 S711 96,6
Error in line 18: b6sM4 S2 450,1
Error in line 20: 4FtgZKv S2 64,9
Error in line 39: S2 S711 81,4
Error in line 40: S2 S711 69,2
